# euler

./: .gitignore  .pre-commit-config.yaml  README.md  euler.erl  euler_util.erl  prob67.erl  project.clj  sieve.erl
clojure/: project.clj
clojure/patches/: 0001-e84-e357.patch  0002-some-playing-e206.patch
clojure/src/euler/: e103.clj  e104.clj  e107.clj  e108.clj  e110.clj  e114.clj  e118.clj  e119.clj  e149.clj  e179.clj  e187.clj  e191.clj  e205.clj  e206.clj  e346.clj  e348.clj  e357.clj  e387.clj  e84.clj  util.clj
doc/: intro.md
erlang/: euler.erl  prob67.erl
ocaml/: euler.code-workspace
ocaml/euler/: Makefile  euler.opam
ocaml/euler/lib/: Main.ml  Numbers.ml  Sieve.ml  dune  e110.ml  e115.ml  e129.ml  e134.ml  e168.ml  e173.ml  e203.ml  e204.ml  e407.ml  jbuild
ocaml/euler/test/: dune  test.ml
resources/: log4j.properties
rust/euler/: .gitignore  .pre-commit-config.yaml  Cargo.toml  TODO.md  justfile
rust/euler/benches/: b10k.rs  basic.rs  e10.rs  e684.rs
rust/euler/src/: build_info.rs  lib.rs
rust/euler/src/problems/: e1.rs  e10.rs  e108.rs  e110.rs  e12.rs  e13.rs  e14.rs  e142.rs  e15.rs  e16.rs  e18.rs  e2.rs  e277.rs  e3.rs  e4.rs  e48.rs  e5.rs  e6.rs  e67.rs  e684.rs  e7.rs  e700.rs  e719.rs  e8.rs  e884.rs  e9.rs  mod.rs
rust/euler/src/util/: debug.rs  formulae.rs  mod.rs  naturals.rs
rust/euler/src/util/sieves/: chain.rs  mod.rs  vec.rs  vec_add.rs  vec_tight.rs
src/euler/: core.clj  e101.clj  e103.clj  e109.clj  e111.clj  e112.clj  e113.clj  e116.clj  e117.clj  e118.clj  e119.clj  e120.clj  e124.clj  e125.clj  e129.clj  e131.clj  e145.clj  e146.clj  e149.clj  e186.clj  e187.clj  e206.clj  e301.clj  e345.clj  e347.clj  e381.clj  e407.clj  e425.clj  e493.clj  e500.clj  steve_e149.clj  util.clj
src/playground/: primes.clj
test/euler/: core_test.clj  e118_test.clj  e149_test.clj  util_test.clj
(+9 files in other folders)
