opam-version: "2.0"
name: "euler"
version: "1.0.0"
maintainer: "Hunter Kelly <hunter.kelly@zalando.ie>"
authors: ["Hunter Kelly <hunter.kelly@zalando.ie>"]
homepage: "https://github.com/retnuh/euler"
bug-reports: "https://github.com/retnuh/euler/issues"
dev-repo: "git@github.com:retnuh/euler.git"
license: ["ISC"]
tags: []
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
]
