[package]
name = "euler"
version = "0.1.0"
authors = ["Hunter Kelly <retnuh@gmail.com>"]
edition = "2021"

[lib]
name = "euler"
path = "src/lib.rs"

[[bin]]
name = "whee"
path = "src/bin/whee.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.53.1"
factorial = "0.4.0"
imbl = "6.1.0"
itertools = "0.13.0"
num = "0.4.3"
